--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<section>
+					<section style="text-align: center">
 						<h3>Mēs</h3>
 						<img src="images/gm_logo.png" style="height: 200px;">
 						<h4>Zaļais Meridiāns</h4>
