--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<section style="align: center">
+					<section>
 						<h3>Mēs</h3>
 						<img src="images/gm_logo.png" style="height: 200px;">
 						<h4>Zaļais Meridiāns</h4>
 						<h1 style="font-size: 2em;">Biedrības un nodibinājumi</h1>
-						<p>20.05.2016</p>
+						<h6>20.05.2016</h6>
 					</section>
 					<section>
 						<h3>Biedrības un nodibinājuma jēdziens</h3>
